// Copyright 2021 MozoLM Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package mozolm.grpc;

import "mozolm/grpc/server_config.proto";

option java_package = "com.google.mozolm.grpc";
option java_outer_classname = "ClientConfigProto";
option java_multiple_files = true;

// Next available ID: 7
message ClientConfig {
  // Server configuration.
  ServerConfig server = 6;

  // Type of request client will be making to the server.
  ClientRequestType request_type = 2;
  enum ClientRequestType {
    // Client request type not set.
    NOT_SET = 0;

    // Returns k-best items following context_string.
    K_BEST_ITEMS = 1;

    // Randomly generates string.
    RANDGEN = 2;

    // Calculates bits-per-char on given test_corpus.
    BITS_PER_CHAR_CALCULATION = 3;
  }

  // Number of items to return in k_best extraction.
  int32 k_best = 3;

  // Context string prior to k_best extraction or random generation.
  string context_string = 4;

  // Test corpus for calculating bits-per-character.
  string test_corpus = 5;

  // Timeout when waiting for response from server specified in seconds.
  double timeout_sec = 1;
}
